wDesktop 0.2.4
 * Make wDesktop start at login on OS X.
 * Make links clickable in chat window.

wDesktop 0.2.3
 * Display chat window at startup.
 * Display vCard image for chat contacts.
 * Add a User-Agent for request to portal.

wDesktop 0.2.2
 * Add a button in photos to go back to the previous folder.
 * Improve display of photo thumbnails.
 * Refresh photos list after photos have been uploaded.
 * Make it possible to run wDesktop at the end of Windows installer.
 * Display release changes in update prompt.

wDesktop 0.2.1
 * Fix French translation for "Refresh".
 * Make it possible to keep wDesktop in the dock on OS X.
