@@ -1,6 +1,7 @@
 wDesktop 0.2.4
- * Make wDesktop start at login on OS X.
+ * Make wDesktop start at login.
  * Make links clickable in chat window.
+ * Fix plugins installation on Windows
 
 wDesktop 0.2.3
  * Display chat window at startup.
